// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complete [block completion] =#57622108-1337-4edd-833a-2557835bcfe0. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": Object {
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "type": "Block",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": ".",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    },
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1001,
  },
}
`;

exports[`Complete [dot equal different namespaceId] = 1 + varvarabcvar. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "varvarabcvar",
      "errors": Array [
        Object {
          "message": "Unknown function varvarabcvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": "varvarabcvar",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
      ],
      "type": "any",
      "value": ".",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": undefined,
      "code": "Function",
      "display": "VLOOKUP()",
      "errors": Array [],
      "type": "any",
      "value": "VLOOKUP()",
    },
    "kind": "function",
    "name": "VLOOKUP",
    "namespace": "core",
    "positionChange": 8,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "VLOOKUP",
    ],
    "value": "VLOOKUP()",
    "weight": 250,
  },
}
`;

exports[`Complete [dot equal same namespaceId] = 1 + varvarabcvar. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": Object {
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "type": "Block",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
      "value": ".",
    },
    Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "number",
      "value": "varvarabcvar",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": ".",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": undefined,
      "code": "Function",
      "display": "custom::ADD()",
      "errors": Array [],
      "type": "any",
      "value": "custom::ADD()",
    },
    "kind": "function",
    "name": "ADD",
    "namespace": "custom",
    "positionChange": 12,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "ADD",
    ],
    "value": "custom::ADD()",
    "weight": 250,
  },
}
`;

exports[`Complete [var equal different namespaceId with namespaceId] =Untitled.varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": Object {
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "type": "Block",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
      "value": ".",
    },
    Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "number",
      "value": "varvarabcvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": undefined,
      "code": "Function",
      "display": "LEN()",
      "errors": Array [],
      "type": "any",
      "value": "LEN()",
    },
    "kind": "function",
    "name": "LEN",
    "namespace": "core",
    "positionChange": 4,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "LEN",
    ],
    "value": "LEN()",
    "weight": 0,
  },
}
`;

exports[`Complete [var equal different namespaceId] =varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "varvarabcvar",
      "errors": Array [
        Object {
          "message": "Unknown function varvarabcvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": "varvarabcvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    },
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
      "varvarabcvar",
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 999,
  },
}
`;

exports[`Complete [var equal same namespaceId] =varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": Object {
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "type": "Block",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "type": "any",
      "value": ".",
    },
    Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "number",
      "value": "varvarabcvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    },
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var include different namespaceId] =1+arvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "arvar",
      "errors": Array [
        Object {
          "message": "Unknown function arvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": "arvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    },
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.arvar",
      "arvar",
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 9,
  },
}
`;

exports[`Complete [var include same namespaceId] =1+arvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "arvar",
      "errors": Array [
        Object {
          "message": "Unknown function arvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": "arvar",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    },
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.arvar",
      "arvar",
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 11,
  },
}
`;

exports[`Complete [var startWith same namespace] = 1 + var 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "type": "any",
      "value": "=",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "type": "number",
      "value": "1",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "type": "number",
      "value": "+",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "var",
      "errors": Array [
        Object {
          "message": "Unknown function var",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "type": "any",
      "value": "var",
    },
  ],
  "firstCompletion": Object {
    "codeFragment": Object {
      "attrs": Object {
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "type": "any",
      "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    },
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 50,
    "preview": undefined,
    "renderDescription": [Function],
    "replacements": Array [
      "#57622108-1337-4edd-833a-2557835bcfe0.var",
      "var",
      "#57622108-1337-4edd-833a-2557835bcfe0.",
      "#57622108-1337-4edd-833a-2557835bcfe0",
      "varvarabcvar",
    ],
    "value": "#57622108-1337-4edd-833a-2557835bcfe0.varvarabcvar",
    "weight": 101,
  },
}
`;
